prometheus/grafana-gateway/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: monitoring
spec:
  hosts:
  - "grafana.dev.clustering.ninja" # Must match the host in the Gateway
  gateways:
  - grafana-gateway
  http:
  - match:
    route:
    - destination:
        host: prometheus-grafana.monitoring.svc.cluster.local # Replace with your Grafana service name
        port:
          number: 80
